--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-flask
-flask-sqlalchemy
-flask-cors
-psycopg2-binary
-pytest
-python-dotenv
-gunicorn
+flask==2.3.3
+flask-sqlalchemy==3.1.1
+flask-cors==4.0.0
+psycopg2-binary==2.9.9
+python-dotenv==1.0.0
+pyjwt==2.8.0
+gunicorn==21.2.0
