--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -1,13 +1,46 @@
-FROM python:3.9-slim
+FROM python:3.9-slim-bullseye
 
+# Set environment variables
+ENV PYTHONDONTWRITEBYTECODE=1 \
+    PYTHONUNBUFFERED=1 \
+    FLASK_APP=app.py \
+    FLASK_ENV=development \
+    PORT=5000
+
+# Create a non-root user
+RUN groupadd -r apotek && useradd -r -g apotek apotek
+
+# Set working directory
 WORKDIR /app
 
+# Install system dependencies
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    gcc \
+    libpq-dev \
+    curl \
+    && rm -rf /var/lib/apt/lists/*
+
+# Copy requirements file
 COPY requirements.txt .
+
+# Install Python dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
+# Copy the application code
 COPY . .
 
-ENV FLASK_APP=app.py
-ENV FLASK_ENV=production
+# Set proper permissions
+RUN chown -R apotek:apotek /app
 
-CMD ["gunicorn", "--bind", "0.0.0.0:5000", "--workers", "3", "--timeout", "120", "app:app"]
+# Switch to non-root user
+USER apotek
+
+# Expose the port the app runs on
+EXPOSE ${PORT}
+
+# Add healthcheck
+HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 \
+    CMD curl -f http://localhost:${PORT}/health || exit 1
+
+# Command to run the application
+CMD ["gunicorn", "--bind", "0.0.0.0:5000", "--workers", "3", "--access-logfile", "-", "--error-logfile", "-", "--log-level", "debug", "app:app"]
