--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -5,32 +5,37 @@ ENV PYTHONDONTWRITEBYTECODE=1 \
     PYTHONUNBUFFERED=1 \
     FLASK_APP=app.py \
     FLASK_ENV=development \
-    PORT=5000
+    PORT=5000 \
+    DOCKER_ENV=true \
+    DB_HOST=postgres \
+    DB_USER=apotek_user \
+    DB_PASSWORD=password \
+    DB_NAME=apotek_db \
+    DB_PORT=5432
 
 # Create a non-root user
 RUN groupadd -r apotek && useradd -r -g apotek apotek
 
-# Set working directory
-WORKDIR /app
-
 # Install system dependencies
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    gcc \
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends \
+    build-essential \
     libpq-dev \
     curl \
     && rm -rf /var/lib/apt/lists/*
 
-# Copy requirements file
-COPY requirements.txt .
+# Set working directory
+WORKDIR /backend
 
-# Install Python dependencies
+# Copy requirements and install dependencies
+COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy the application code
+# Copy application files
 COPY . .
 
 # Set proper permissions
-RUN chown -R apotek:apotek /app
+RUN chown -R apotek:apotek /backend
 
 # Switch to non-root user
 USER apotek
