--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,7 @@ services:
       - SECRET_KEY=your_secret_key_here
       - JWT_SECRET_KEY=your_jwt_secret_here
     volumes:
-      - ./backend:/app
+      - ./backend:/backend
     depends_on:
       postgres:
         condition: service_healthy
