--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,9 @@ services:
       dockerfile: Dockerfile
     container_name: apotek_frontend
     ports:
-      - "5173:5173"
+      - "80:80"
     environment:
-      - VITE_API_URL=http://backend:5000
+      - VITE_API_URL=http://localhost:5000
     volumes:
       - ./frontend:/app
       - /app/node_modules
