--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,9 +14,12 @@
     "@heroicons/react": "^2.2.0",
     "@tanstack/react-query": "^5.62.7",
     "@tanstack/react-query-devtools": "^5.62.7",
+    "@tremor/react": "^3.18.6",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
     "classnames": "^2.5.1",
+    "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "postcss": "^8.4.49",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
