--- a/frontend/dockerfile
+++ b/frontend/dockerfile
@@ -20,6 +20,7 @@ FROM nginx:alpine
 
 # Copy built assets from builder stage
 COPY --from=builder /app/dist /usr/share/nginx/html
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 # Copy nginx configuration if you have custom config
 # COPY nginx.conf /etc/nginx/conf.d/default.conf
