--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,16 +1,24 @@
 server {
     listen 80;
-    listen [::]:80;
     server_name localhost;
-    
+
+    root /usr/share/nginx/html;
+    index index.html;
+
     location / {
-        root /usr/share/nginx/html;
-        index index.html index.htm;
-        try_files $uri $uri/ /index.html;
+        try_files $uri /index.html;
     }
 
-    error_page 500 502 503 504 /50x.html;
-    location = /50x.html {
-        root /usr/share/nginx/html;
+    location /static/ {
+        alias /usr/share/nginx/html/static/;
     }
+
+    location /login {
+        internal;  # Ensures Nginx doesn't attempt to serve this from cache or a different context
+        add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate";
+        add_header Pragma "no-cache";
+        add_header Expires 0;
+    }
+
+    error_page 404 /index.html;
 }
