--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -1,3 +1,4 @@
+# Dockerfile for Backend
 FROM python:3.9-slim-bullseye
 
 # Set environment variables
@@ -25,7 +26,7 @@ RUN apt-get update && \
     && rm -rf /var/lib/apt/lists/*
 
 # Set working directory
-WORKDIR /backend
+WORKDIR /app
 
 # Copy requirements and install dependencies
 COPY requirements.txt .
@@ -35,7 +36,7 @@ RUN pip install --no-cache-dir -r requirements.txt
 COPY . .
 
 # Set proper permissions
-RUN chown -R apotek:apotek /backend
+RUN chown -R apotek:apotek /app
 
 # Switch to non-root user
 USER apotek
