--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,24 +1,39 @@
 server {
-    listen 80;
-    server_name localhost;
+    listen 80 default_server;
+    listen [::]:80 default_server;
+    server_name apotek-erp.my.id www.apotek-erp.my.id;
 
     root /usr/share/nginx/html;
     index index.html;
 
+    # Handle JavaScript modules correctly
+    location ~* \.js$ {
+        add_header Content-Type text/javascript;
+    }
+
     location / {
-        try_files $uri /index.html;
+        try_files $uri $uri/ /index.html;
+        add_header Access-Control-Allow-Origin "*";
+        add_header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE";
+        add_header Access-Control-Allow-Headers "*";
     }
 
+    location /api/ {
+        proxy_pass http://apotek_flask:5000/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+    }
+
+    # Static files caching
     location /static/ {
-        alias /usr/share/nginx/html/static/;
+        expires 1y;
+        add_header Cache-Control "public";
     }
 
-    location /login {
-        internal;  # Ensures Nginx doesn't attempt to serve this from cache or a different context
-        add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate";
-        add_header Pragma "no-cache";
-        add_header Expires 0;
-    }
-
-    error_page 404 /index.html;
+    # Basic gzip configuration
+    gzip on;
+    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
 }
