--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,10 @@
 version: '3.8'
-
 services:
   frontend:
-    build: 
-      context: ./frontend
-      dockerfile: Dockerfile
+    image: ghcr.io/david-dewanto/tubes-lasti-frontend:latest
     container_name: apotek_frontend
     ports:
-      - "3000:3000"
-    environment:
-      - VITE_API_URL=http://localhost:5000
+      - "80:80"
     volumes:
       - ./frontend:/app
       - /app/node_modules
@@ -17,14 +12,27 @@ services:
       - backend
     networks:
       - apotek_network
+    restart: unless-stopped
 
-  backend:
-    build: 
-      context: ./backend
-      dockerfile: Dockerfile
-    container_name: apotek_flask
+  nginx:
+    image: nginx:alpine
+    container_name: apotek_nginx
     ports:
       - "5000:5000"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+      - nginx_logs:/var/log/nginx
+    depends_on:
+      - backend
+    networks:
+      - apotek_network
+    restart: unless-stopped
+
+  backend:
+    image: ghcr.io/david-dewanto/tubes-lasti-backend:latest
+    container_name: apotek_flask
+    expose:
+      - "5000"
     environment:
       - DATABASE_URL=postgresql://apotek_user:password@postgres:5432/apotek_db
       - FLASK_APP=app.py
@@ -44,6 +52,7 @@ services:
       timeout: 10s
       retries: 3
       start_period: 40s
+    restart: unless-stopped
 
   postgres:
     image: postgres:15-alpine
@@ -64,6 +73,7 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
+    restart: unless-stopped
 
 networks:
   apotek_network:
@@ -71,4 +81,6 @@ networks:
 
 volumes:
   postgres_data:
+    driver: local
+  nginx_logs:
     driver: local
